20070927 test/{complete-tzx.pl,test15.c}: and more block types to the full
	 TZX test.
20071006 csw.c: use memset() instead of bzero() for consistency (Stuart).
20071007 doc/libspectrum.txt,libspectrum.h.in,rzx.c: add functionality
	 required for updated rzxtool.
20071024 libspectrum.c: fix compilation on MorphOS (part of patch #1774492)
	 (Q-Master).
20071024 libspectrum.c,libspectrum.h.in,sna.c,szx.c,timings.c,z80.c: add
	 Pentagon 512K and Pentagon 1024K support (part of patch #1774492)
	 (Q-Master).
20071026 doc/libspectrum.txt: add Pentagon 512/1024, fix typos (Stuart).
20071026 ChangeLog: fix typos (Stuart).
20071030 csw.c,tape.c: fix writing and reading empty csw files (fixes bug
         #1821425; thanks Stuart Brady) (Fred).
20071101 csw.c,tape.c,tape_block.c,test/test.c: add test for reading empty
         csw files and add more fixes to cope (more for bug #1821425) (Fred).
20071109 tap.c,test/test.c: ensure .tap writing code handles all known block
         types (fixes bug #1828945; thanks, Stuart Brady).
20071112 timings.c: timing tweak for TC2048 and TC2068 based on test programs
         from Phil and Woodster (Fred).
20071124 accessor.pl,snap_accessors.txt,snapshot.c,szx.c,z80.c: add support
         for the +D in z80 and szx snapshots (patch #1782512) (Fred).
20071124 szx.c: fix warnings.
20071125 test/test.c: fix warnings (Stuart).
20071125 tap.c: fix error messages (Stuart).
20071128 ChangeLog: update (Stuart).
20071129 sna.c: fix misleading comment.
20071129 sna.c: sanity check SP before attempting to read from it.
20071129 tests/{sp-2000.sna.gz,sp-ffff.sna.gz,test.c}: add tests for bugs
         #1841085 (SP not sanity checked when loading 48K .sna file) and
         #1841111 (compressed snapshots cause segfault).
20071129 libspectrum.c: check new_filename before checking *new_filename.
20071130 dll.c: fix typo and remove executable property (Stuart).
20071130 libspectrum.c: free *new_filename instead of new_filename (Stuart).